updated belt exam

--- a/Django/Courses/apps/CourseFrame/templates/CourseFrame/index.html
+++ b/Django/Courses/apps/CourseFrame/templates/CourseFrame/index.html
@@ -43,6 +43,7 @@
             <th>
                 <a href="user/{{course.id}}/remove">remove</a>
                 <a href="user/{{course.id}}/join">join course</a>
+                <a href="user/{{course.id}}/edit">edit</a>
             </th>
             <th></th>
         </tr>
