--- a/Django/BeltExam/apps/LogReg/templates/LogReg/index.html
+++ b/Django/BeltExam/apps/LogReg/templates/LogReg/index.html
@@ -32,7 +32,7 @@
         <input type="submit" value="Register">
     </form>
     <h2>Login</h2>
-    <form action="/success" method="POST">
+    <form action="/user" method="POST">
         {% csrf_token %}
         <label for="Email">Email:</label>
         <input type="email" name="Email">
