--- a/Django/BeltExam/apps/LogReg/templates/LogReg/index.html
+++ b/Django/BeltExam/apps/LogReg/templates/LogReg/index.html
@@ -17,12 +17,12 @@
     <h2>Registration</h2>
     <form action="/register" method="POST">
         {% csrf_token %}
-        <label for="first_name">First Name:</label>
-        <input type="text" name="first_name">
-        <label for="last_name">Last Name:</label>
-        <input type="text" name="last_name">
-        <label for="email">Email:</label>
-        <input type="email" name="email">
+        <label for="name">Name:</label>
+        <input type="text" name="name">
+        <label for="username">Userame:</label>
+        <input type="text" name="username">
+        <!-- <label for="email">Email:</label>
+        <input type="email" name="email"> -->
         <label for="password">Password:</label>
         <input type="password" name="password">
         <lable for="Cpassword">Confirm Password:</lable>
@@ -32,10 +32,10 @@
         <input type="submit" value="Register">
     </form>
     <h2>Login</h2>
-    <form action="/user" method="POST">
+    <form action="/success" method="POST">
         {% csrf_token %}
-        <label for="Email">Email:</label>
-        <input type="email" name="Email">
+        <label for="Username">Username:</label>
+        <input type="text" name="Username">
         <label for="Password">Password:</label>
         <input type="password" name="Password">
         <input type="submit" value="login">
