--- a/MeanStack/QuotingDojo/views/quote.ejs
+++ b/MeanStack/QuotingDojo/views/quote.ejs
@@ -11,22 +11,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to QuotingDojo</h1>
-    <form action="/process" method="POST">
-        <div class="form-group">
-            <label for="name">Your name:</label>
-            <input type="text" name="name">
-        </div>
-        <label for="quote">Your Quote:</label>
-        <div class="form-group">
-            <textarea rows="4" cols="50" name="quote"></textarea>
-        </div>
-        <input type="submit">
-    </form>
-    <% if(typeof(errors) != 'undefined') { %>
-        <% for (var x in errors) { %>
-        <h3><%= errors[x].message %></h3>
-        <% } %>
+    <h1>Here are the awesome quotes!</h1>
+    <% for (var i in quotes) { %>
+    <p>"<%= quotes[i].quote %>"</p>
+    <p>-<%= quotes[i].name %> at <%= quotes[i].time %></p>
+    <br>
     <% } %>
+    <a href="/"><button>Go back</button></a>
 </body>
 </html>
