finished wedding planner

--- a/C-Sharp-Projects/DojoLeague/Views/DojoLeague/Index.cshtml
+++ b/C-Sharp-Projects/DojoLeague/Views/DojoLeague/Index.cshtml
@@ -1,1 +1,4 @@
-<h1>DojoLeague</h1>
+<div class="container">
+    <h1 class="brand-logo center">Welcome</h1>
+    <img src="~/images/Dojo.png" height="100%" width="100%" alt="dojo">
+</div>
