--- a/C-Sharp-Projects/DojoLeague/Views/Shared/_Layout.cshtml
+++ b/C-Sharp-Projects/DojoLeague/Views/Shared/_Layout.cshtml
@@ -5,17 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - DojoLeague</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-    <script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="~/css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="~/materialize/css/materialize.css" />
+    <link rel="stylesheet" href="~/css/style.css"/>
+    <script src="~/materialize/js/materialize.js"></script>
     <script type="text/javascript" src="~/js/main.js"></script>
+    <script>
+        $(document).ready(function(){
+            $('select').formSelect();
+        });
+    </script>
 </head>
 <body>
-    <div class="header">
-
+    <nav>
+    <div class="nav-wrapper grey darken-4">
+        <a href="/" class="brand-logo center">Dojo League</a>
+        <ul class="left hide-on-med-and-down">
+        <li><a href="/Ninjas">Ninjas</a></li>
+        <li class="active"><a href="/Dojos">Dojos</a></li>
+        </ul>
     </div>
-
+    </nav>
+    @model DojoLeague.Models.RegisterViewDojo
     <div class="body">
         <!-- Your View will be rendered in place of RenderBody -->
         @RenderBody()
